# edu-backend

./: .env  .env.template  Dockerfile  README.md  docker-compose.yml  load-env.ps1  pyproject.toml
src/: main.py
src/agents/: agent.py  callbacks.py  rate_limiter.py
src/agents/chat_agent/: agent.py  instructions.txt
src/agents/code_checker/: code_checker.py  package-lock.json  package.json
src/agents/explainer_agent/: agent.py
src/agents/flashcard_agent/: testing_agent.py
src/agents/grader_agent/: agent.py
src/agents/html_agent/: agent.py
src/agents/image_agent/: agent.py
src/agents/info_agent/: agent.py
src/agents/planner_agent/: agent.py
src/agents/tester_agent/: agent.py
src/config/: chroma_settings.py  settings.py
src/db/crud/: chapters_crud.py  courses_crud.py
src/db/models/: db_chat.py  db_user.py
src/services/: agent_service.py  vector_service.py
src/services/data_processors/: pdf_processor.py
tests/: test_agent.py
