[project]
name = "edu-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "asyncio>=4.0.0",
    "bcrypt>=4.3.0",
    "chromadb>=1.0.20",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "genanki>=0.13.1",
    "google-adk>=1.10.0",
    "itsdangerous>=2.2.0",
    "matplotlib>=3.10.5",
    "mysql-connector-python>=9.4.0",
    "passlib[bcrypt]>=1.7.4",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "pydantic[email]>=2.11.7",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.42",
    "uvicorn[standard]>=0.35.0",
]
